--- a/login/Assistant/Assistant/Views/Utility/Main_menu.cshtml
+++ b/login/Assistant/Assistant/Views/Utility/Main_menu.cshtml
@@ -29,7 +29,7 @@
         <div class="row mt-3"></div>
         <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Share_list", "Home")'" value="Udostepnij liste" style=" margin-bottom:3px; width:215px" />
         <div class="row mt-3"></div>
-        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Select_list_to_save_offline", "Progressive")'" value="Zapisz listę do trybu offline" style=" margin-bottom:3px; width:215px" />
+        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Select_list_to_save_offline", "Offline")'" value="Zapisz listę do trybu offline" style=" margin-bottom:3px; width:215px" />
 
     }
     else
