--- a/login/Assistant/Assistant/Views/Utility/Main_menu.cshtml
+++ b/login/Assistant/Assistant/Views/Utility/Main_menu.cshtml
@@ -21,7 +21,7 @@
     <div class="row mt-3"></div>
     @if (User.Identity.IsAuthenticated)
     {
-        
+
         <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Select_mode", "Generate")'" value="Wygeneruj listę zakupów" style=" margin-bottom:3px; width:215px" />
         <div class="row mt-3"></div>
         <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Public_list_load", "Home")'" value="Edytuj listy publiczne" style="margin-bottom:3px; width:215px" />
@@ -31,6 +31,10 @@
         <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Share_list", "Home")'" value="Udostepnij liste" style=" margin-bottom:3px; width:215px" />
         <div class="row mt-3"></div>
         <input type="button" class="btn-primary" onclick="location.href='@Url.Action("Select_list_to_save_offline", "Offline")'" value="Zapisz listę do trybu offline" style=" margin-bottom:3px; width:215px" />
+
+
+        <div class="row mt-3"></div>
+        <input type="button" class="btn-primary" onclick="location.href='@Url.Action("NeuralNetworkTest", "Generate")'" value="NN test" style=" margin-bottom:3px; width:215px" />
 
     }
     else
